fix: on product page fix overflow horizont

--- a/styles/products-page/style.scss
+++ b/styles/products-page/style.scss
@@ -9,6 +9,14 @@ html {
     scroll-behavior: smooth;
 }
 
+.body-container {
+    overflow-x: hidden;
+    max-width: 1440px;
+    position: relative;
+    
+}
+
+
 a {
     outline: none;
     text-decoration: none;
